[package]
name = "noiseplayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.1", features = ["derive"] }
daemonize = "0.5.0"
env_logger = "0.10.0"
fd-lock = "4.0.0"
log = "0.4.20"
nix = { version = "0.27.1", features = ["process", "signal"] }
rodio = "0.17.1"
tokio = { version = "1.32.0", features = ["signal"] }
